src/objects/demo__c.object
<CustomObject>
    <fields>
        <fullName>TestSVN__c</fullName>
        <externalId>true</externalId>
        <label>TestFromSVN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <externalId>true</externalId>
        <label>TestFromSVN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encryp__c</fullName>
        <label>encryp</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>HYPERLINK( Test__c ,  Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testing__c</fullName>
        <label>testing</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>demo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>demos</pluralLabel>
    <recordTypes>
        <fullName>hello2</fullName>
        <active>true</active>
        <label>hello2</label>
    </recordTypes>
    <recordTypes>
        <fullName>heloo</fullName>
        <active>true</active>
        <label>heloo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Test__c</fullName>
        <label>Test</label>
    </sharingReasons>
</CustomObject>